[package]
edition = "2018"
name = "backend-actix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-graphql = {version = "2.9.3", features = ["chrono"]}
rbatis = {version = "1.8.3", default-features = false, features = ["mysql", "postgres"]}
