[package]
edition = "2018"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.6.0"
async-std = {version = "1.9.0", features = ["attributes"]}
bson = "1.2.0"
mongodb = {version = "1.2.0", default-features = false, features = ["async-std-runtime"]}
tide = "0.16.0"
