[package]
edition = "2018"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "2.9.3", features = ["bson", "dataloader"]}
async-std = {version = "1.9.0", features = ["attributes"]}
bson = "2.0.0-beta"
futures = "0.3.13"
mongodb = {version = "2.0.0-beta.1", default-features = false, features = ["async-std-runtime"]}
serde = {version = "1.0.126", features = ["derive"]}
tide = "0.16.0"
